--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -5,43 +5,6 @@ body {
   color: #191919;
 }
 
-/* h1 */
-.class-for-60px {
-  font-size: 2.7273em; /* 60px */
-  line-height: 1.2500em; /* 75px */
-  margin-top: 0.4167em;
-  margin-bottom: 0.0000em;
-}
-/* h2 */
-.class-for-36px {
-  font-size: 1.6364em; /* 36px */
-  line-height: 1.3889em; /* 50px */
-  margin-top: 0.6944em;
-  margin-bottom: 0.0000em;
-}
-/* h3 */
-.class-for-24px {
-  font-size: 1.0909em; /* 24px */
-  line-height: 1.0417em; /* 25px */
-  margin-top: 1.0417em;
-  margin-bottom: 0.0000em;
-}
-/* Body */
-.class-for-22px {
-  font-size: 1.0000em; /* 22px */
-  line-height: 1.1364em; /* 25px */
-  margin-top: 1.1364em;
-  margin-bottom: 0.0000em;
-}
-/* h4 */
-.class-for-18px {
-  font-size: 0.8182em; /* 18px */
-  line-height: 1.3889em; /* 25px */
-  margin-top: 1.3889em;
-  margin-bottom: 0.0000em;
-}
-
-
 /* Typography */
 
 h1, h2, h3, h4, h5 {
@@ -76,7 +39,9 @@ h4 {
   line-height: 1.3889em; /* 25px */
   margin-top: 0.0000em;
   margin-bottom: 1.3889em;
-  color: #BDB7B4;
+  font-style: italic;
+  font-weight: normal;
+  text-transform: uppercase;
 }
 
 p {
@@ -112,7 +77,6 @@ nav {
 
   nav > p > a {
     margin: 0 8px;
-    text-decoration: none;
   }
 
 main {
@@ -130,4 +94,5 @@ footer {
   height: 4px;
   border-top: 6px solid #191919;
   border-bottom: 2px solid #BDB7B4;
+  margin-bottom: 16px;
 }
