--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -5,6 +5,54 @@ body {
   color: #191919;
 }
 
+@font-face {
+  font-family: "Borgia Pro";
+  src: url("../fonts/BorgiaPro-Italic-webfont.eot");
+  src: url("../fonts/BorgiaPro-Italic-webfont.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/BorgiaPro-Italic-webfont.woff") format("woff"),
+       url("../fonts/BorgiaPro-Italic-webfont.ttf") format("truetype"),
+       url("../fonts/BorgiaPro-Italic-webfont.svg#borgia_proitalic") format("svg");
+  font-weight: normal;
+  font-style: italic;
+
+}
+
+@font-face {
+  font-family: "Borgia Pro";
+  src: url("../fonts/BorgiaPro-Regular-webfont.eot");
+  src: url("../fonts/BorgiaPro-Regular-webfont.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/BorgiaPro-Regular-webfont.woff") format("woff"),
+       url("../fonts/BorgiaPro-Regular-webfont.ttf") format("truetype"),
+       url("../fonts/BorgiaPro-Regular-webfont.svg#borgia_proregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: "Borgia Pro";
+  src: url("../fonts/BorgiaPro-BoldItalic-webfont.eot");
+  src: url("../fonts/BorgiaPro-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/BorgiaPro-BoldItalic-webfont.woff") format("woff"),
+       url("../fonts/BorgiaPro-BoldItalic-webfont.ttf") format("truetype"),
+       url("../fonts/BorgiaPro-BoldItalic-webfont.svg#borgia_probold_italic") format("svg");
+  font-weight: bold;
+  font-style: italic;
+
+}
+
+@font-face {
+  font-family: "Borgia Pro";
+  src: url("../fonts/BorgiaPro-Bold-webfont.eot");
+  src: url("../fonts/BorgiaPro-Bold-webfont.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/BorgiaPro-Bold-webfont.woff") format("woff"),
+       url("../fonts/BorgiaPro-Bold-webfont.ttf") format("truetype"),
+       url("../fonts/BorgiaPro-Bold-webfont.svg#borgia_probold") format("svg");
+  font-weight: bold;
+  font-style: normal;
+
+}
+
 /* Typography */
 
 h1, h2, h3, h4, h5 {
