--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,8 +1,10 @@
 body {
-  max-width: 60ch;
-  margin: 60px auto;
-  font: 22px "Borgia Pro";
-  color: #191919;
+  margin: auto;
+  font: 18px "Borgia Pro";
+  color: #212121;
+  background-color: #EEEEEE;
+  line-height: 1.556;
+  height: 100%;
 }
 
 @font-face {
@@ -55,103 +57,171 @@ body {
 
 /* Typography */
 
+p {
+  max-width: 60ch;
+}
+
+a {
+  font-size: 18px;
+  font-weight: bold;
+  color: #212121;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+  a:hover {
+    color: #9B2621;
+  }
+
 h1, h2, h3, h4, h5 {
   text-rendering: optimizeLegibility;
   margin-bottom: 0;
 }
 
 h1 {
-  font-size: 2.7273em; /* 60px */
-  line-height: 1.2500em; /* 75px */
-  margin-top: 0.4167em;
-  margin-bottom: 0.0000em;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 1.167;
 }
 
 h2 {
-  font-size: 1.6364em; /* 36px */
-  line-height: 1.3889em; /* 50px */
-  margin-top: 0.6944em;
-  margin-bottom: 0.0000em;
+  font-size: 24px;
+  font-weight: normal;
   font-style: italic;
+  color: #616161;
+  line-height: 1.5;
 }
 
-h3 {
-  font-size: 1.0909em; /* 24px */
-  line-height: 1.0417em; /* 25px */
-  margin-top: 1.0417em;
-  margin-bottom: 0.0000em;
+h3, h3 > a {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.167;
 }
 
 h4 {
-  font-size: 0.8182em; /* 18px */
-  line-height: 1.3889em; /* 25px */
-  margin-top: 0.0000em;
-  margin-bottom: 1.3889em;
-  font-style: italic;
+  font-size: 24px;
   font-weight: normal;
+  color: #616161;
+  font-style: italic;
+  line-height: 1.167;
+}
+
+h5 {
+  font-size: 22px;
   text-transform: uppercase;
+  color: #616161;
+  font-weight: normal;
+  padding: 10px 24px 10px 46px;
 }
 
 p {
-  font-size: 1em; /* 22px */
-  line-height: 1.1364em; /* 25px */
-  margin: 0 0 1.1364em 0;
+  font-size: 18px;
+  line-height: 1.556;
 }
 
-a {
-  font-size: 0.7273em; /* 16px */
-  line-height: 1.5625em; /* 25px */
-  margin: 0 0 1.5625em 0;
-  color: #07598C;
-  text-transform: uppercase;
-  font-weight: bold;
-}
+/**
+ * h1: 36px, regular;
+ * h2: 24px, italic, #616161;
+ * h3: 24px, regular;
+ * h4: 18px, italic, #616161;
+ * a: 18px, bold, #B0120A;
+ * h5: 22px, all-caps, #616161;
+ * p: 18px #212121;
+*/
 
-article > header > h1 + p {
-  font-style: italic;
-  text-transform: uppercase;
-}
+
 
 /* Elements */
 
-header[role=banner] {
-  margin: auto 16px;
-  text-align: center;
+main {
+  margin: 0 0 0 310px;
+  height: 100%;
+  position: relative;
+  padding: 24px;
+  padding-bottom: 35px;
+  width: 780px;
+  background-color: #FAFAFA;
+}
+
+section {
+  margin-top: 60px;
 }
 
 nav {
-  margin: 1em 0; 
-  border-top: 2px solid #BDB7B4;
-  border-bottom: 6px solid #191919;
+  min-height: 100% !important;
+  padding-top: 50px;
+  padding-bottom: 279px;
+  float: left;
+  width: 250px;
+  margin: 0;
+  border-left: 60px solid #FAFAFA;
+  position: relative;
+  text-align: center;
+  background-color: #FEFDDF;
 }
-  nav > p {
-    margin: 5px 16px;
+
+nav > ul, nav > h5 {
+  text-align: left;
+}
+
+dl {
+  text-align: left;
+}
+
+  dt {
+    margin-top: 0;
   }
 
-  nav > p > a {
-    margin: 0 8px;
-  }
-
-main {
-  margin: auto 16px;
+nav a {
+  border-left: 2px solid transparent;
+  display: block;
+  letter-spacing: 0.1px;
+  padding: 10px 24px 10px 46px;
+  white-space: nowrap;
 }
 
-footer {
-  text-align: right;
+nav a:hover, nav a.current {
+  background-color: #FFECB3;
+  color: #9B2621;
 }
+
+address {
+  font-style: normal;
+}
+
 
 /* IDs */
 
 #logo {
-  max-width: 200px;
+  max-width: 100px;
 }
 
 /* Classes */
 
-.border {
+.mask {
+  background-color: rgba(0,0,0,.5);
+  height: 100%;
+  left: 0;
+  opacity: .1;
+  top: 0;
+  visibility: hidden;
   width: 100%;
-  height: 4px;
-  border-top: 6px solid #191919;
-  border-bottom: 2px solid #BDB7B4;
-  margin-bottom: 16px;
+  z-index: 3;
+  position: fixed;
+  -webkit-transition: visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1);
+  -moz-transition: visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1);
+  transition: visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1);
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.mask-visible {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition-delay: 0;
+  -moz-transition-delay: 0;
+  transition-delay: 0;
 }
