--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -57,7 +57,7 @@ body {
 
 /* Typography */
 
-p {
+article {
   max-width: 60ch;
 }
 
@@ -137,8 +137,9 @@ main {
   margin: 0 0 0 310px;
   height: 100%;
   position: relative;
-  padding: 24px;
+  padding: 24px 60px;
   padding-bottom: 35px;
+  box-shadow: 1px 0 1px #ccc;
   width: 780px;
   background-color: #FAFAFA;
 }
@@ -150,12 +151,12 @@ section {
 nav {
   min-height: 100% !important;
   padding-top: 50px;
-  padding-bottom: 279px;
   float: left;
   width: 250px;
   margin: 0;
   border-left: 60px solid #FAFAFA;
   position: relative;
+  position: fixed;
   text-align: center;
   background-color: #FEFDDF;
 }
