--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,7 +127,7 @@ main {
   position: relative;
   padding: 24px 60px;
   padding-bottom: 35px;
-  width: 780px;
+  max-width: 780px;
   background-color: #FAFAFA;
 }
 
