--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,6 @@ body {
        url("../fonts/BorgiaPro-Italic-webfont.svg#borgia_proitalic") format("svg");
   font-weight: normal;
   font-style: italic;
-
 }
 
 @font-face {
@@ -28,7 +27,6 @@ body {
        url("../fonts/BorgiaPro-Regular-webfont.svg#borgia_proregular") format("svg");
   font-weight: normal;
   font-style: normal;
-
 }
 
 @font-face {
@@ -40,7 +38,6 @@ body {
        url("../fonts/BorgiaPro-BoldItalic-webfont.svg#borgia_probold_italic") format("svg");
   font-weight: bold;
   font-style: italic;
-
 }
 
 @font-face {
@@ -52,7 +49,6 @@ body {
        url("../fonts/BorgiaPro-Bold-webfont.svg#borgia_probold") format("svg");
   font-weight: bold;
   font-style: normal;
-
 }
 
 /* Typography */
@@ -136,19 +132,16 @@ section {
 }
 
 nav {
-  min-height: 100% !important;
+  min-height: 100%;
   padding-top: 50px;
-  float: left;
   width: 250px;
-  margin: 0;
   border-left: 60px solid #FAFAFA;
-  position: relative;
   position: fixed;
   text-align: center;
   background-color: #FEFDDF;
 }
 
-nav > ul, nav > h5 {
+nav > h5 {
   text-align: left;
 }
 
@@ -185,6 +178,10 @@ address {
 }
 
 /* Classes */
+
+span.gc-cs-link {
+  color: #212121;
+}
 
 .mask {
   background-color: rgba(0,0,0,.5);
