Updates and fixes

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
       | Counsel
   main(role='content')
     header(role='banner')
-      h1 This Website Is To Prove To Trevor That I can do shit!
+      h1 Jefferson Associated Counsel
       h2 Public Defense Office for Jefferson County, Washington
     article
       section
