--- a/views/about.jade
+++ b/views/about.jade
@@ -20,49 +20,45 @@ block content
       | Counsel
   main(role='content')
     header(role='banner')
-      h1 Jefferson Associated Counsel
+      h1 Welcome to Jefferson Associated Counsel (JAC)
       h2 Public Defense Office for Jefferson County, Washington
     article
       header
         h1 About Us
         p
-          | Jefferson Associated Counsel (JAC) organized as a 501(c)(3) non-profit in 2005 to improve the delivery of criminal defense services to the poor in Jefferson County Courts. We provide representation in felony, misdemeanor, juvenile, and dependency cases.
+          | We organized in 2005 to improve the delivery of criminal defense services to low income people in Jefferson County Courts.  Be it felony, misdemeanor, juvenile, or dependency cases, we are a public interest non-profit firm ready to serve community members in need.
       section
-        img(src='images/avatar_placeholder.jpg')
         h3 Jennifer Dempsey
         h4 Office Manager
         p
-          | Jennifer runs the office and provides invaluable para-legal support for our attorneys. She maintains and updates thousands of client files and legal correspondence, directs attorneys to appointments, drafts legal documents, answers the phones, and assists clients daily with non-legal issues. Her work keeps the Jefferson Associated Counsel team organized and running smoothly as a cohesive unit.
+          | Jennifer runs the office and provides invaluable para-legal support for our attorneys.  She maintains and updates thousands of client files and legal correspondence, directs attorneys to appointments, drafts legal documents, answers the phones, and assists clients daily with non-legal issues.  Her work keeps the Jefferson Associated Counsel team organized and running smoothly as a cohesive unit.
       section
-        img(src='images/avatar_placeholder.jpg')
-        h3 Jack Range
-        h4 Investigator
-        p
-          | Jack works in both the office and in the community, combing the streets looking for evidence, canvassing for witnesses, doing interviews, and helping clients in times of need. He becomes involved with a client’s case from arraignment and serves as an instrumental part of the legal team all the way through trial.
-      section
-        img(src='images/avatar_placeholder.jpg')
         h3 Bret Roberts
         h4 District Court Attorney
-        p Coming Soon…
+        p
+          | Bret's drive to deliver results for his clients is unparalleled in the local legal community.  Ever since he started working at JAC in 2010, pre-dawn walkers and those delivering newspapers see a light reflecting on Polk Street from his upstairs office.
       section
-        img(src='images/avatar_placeholder.jpg')
         h3 Nat Jacob
         h4 District Court Attorney
-        p Coming Soon…
+        p 
+          | Fresh from Kalispell Montana, Nat began working at JAC in 2014.  He enjoys connecting with his clients, who remind him of the community members he grew up with back home, and navigating their cases through trial if necessary.
       section
-        img(src='images/avatar_placeholder.jpg')
         h3 Ben Critchlow
         h4 Superior Court Attorney
         p
           | Founder of JAC and former director. Replaced in a brilliantly engineered coup by current director, Richard Davies. Grew up in Kennewick, Wa. and as a result identifies with clients who have desperate needs.
       section
-        img(src='images/avatar_placeholder.jpg')
         h3 Scott Charlton
         h4 Superior Court, Juvenile, and Dependency Attorney
-        p Coming Soon…
+        p
+          | Scott uses his 20 years of experience as both a local prosecutor and defense attorney to the advantage of his clients.  His drive for out door adventure brought him to this part of the country, which he balances with the meaningful work he finds in the courtroom.
       section
-        img(src='images/avatar_placeholder.jpg')
         h3 Richard Davies
         h4 Director and Superior Court Attorney
         p
-          | Richard Davies has been defending the rights of people charged with crimes in Port Townsend and Jefferson County for over 20 years, as both a public defender and private attorney. His breadth of criminal defense experience includes dozens of felony and misdemeanor jury trials, and appeals before the Court of Appeals and the State Supreme Court. He is often consulted by local and out-of-town attorneys about how to handle traffic and criminal cases in Jefferson County courts.
+          | Richard Davies has been defending the rights of people charged with crimes in Port Townsend and Jefferson County for over 20 years, as both a public defender and private attorney.  His breadth of criminal defense experience includes dozens of felony and misdemeanor jury trials, and appeals before the Court of Appeals and the State Supreme Court.
+      section
+        h3 Jack Range
+        h4 Investigator
+        p
+          | Jack works in both the office and in the community, combing the streets looking for evidence, canvassing for witnesses, doing interviews, and helping clients in times of need. He becomes involved with a client’s case from arraignment and serves as an instrumental part of the legal team all the way through trial.
