--- a/views/resources.jade
+++ b/views/resources.jade
@@ -20,36 +20,38 @@ block content
       | Counsel
   main(role='content')
     header(role='banner')
-      h1 Jefferson Associated Counsel
+      h1 Welcome to Jefferson Associated Counsel (JAC)
       h2 Public Defense Office for Jefferson County, Washington
     article
       header
         h1 FAQ’s
         p These are the most common questions we get.
       section
-        h3 How do I get a Public Defender?
+        h3 How do I get a Public Defender?:
         p
-          | Fill out a “Indigency Screening Form” at the Superior Court Clerk’s office if you are charged with a felony crime, or the District Court Clerk’s office if you are charged with a misdemeanor crime. If you qualify, our office will assign a lawyer to your case.
+          | Fill out a "Indigency Screening Form" (<-link to document below) and turn it in to the Superior Court Clerk's office if you are charged with a felony crime, or the District Court Clerk's office if you are charged with a misdemeanor crime.  If you qualify, they will contact Jennifer, our office manager, and she will assign a lawyer to your case.
       section
         h3 I have a warrant out for my arrest, so how do I quash (terminate) it?
         p
-          | For a felony warrant out of
-          i Superior Court
+          b
+            | For a felony warrant out of 
+            i Superior Court
           | :
         p
-          | You can post the bail in person, or through a bail bondsman, at the Jefferson County Superior Court Clerk’s Office. Alternatively, turn yourself in at the jail by 8AM and you will likely have a hearing the same day.
+          | You can post the bail in person, or through a bail bondsman, at the Jefferson County Superior Court Clerk's Office.  Alternatively, turn yourself in at the jail by 8AM and you will likely have a hearing the same day.
         p
-          | *At the hearing, the Judge will decide whether to post further bail, so turning yourself in is no guarantee that you will get to leave the jail afterward.
+          i *The Judge may decide to set a higher bail at your hearing, so you may remain in jail if you cannot post the new amount.
         p
-          | For a misdemeanor warrant out of
-          i District Court
+          b
+            | For a misdemeanor warrant out of 
+            i District Court
           | :
+        ol
+          li Show up to the Friday "Warrant Quash" Calendar at District Court before 10 AM with $100 and a photo ID.  Pay the District Court Clerk's Office and they will put you on the calendar.  You can only do this one time per criminal charge.
+        
+          li Alternatively you can pay the full amount of bail to the District Court Clerk, at any time, in person or through a bail bond company.
         p
-          | Show up to the Friday “Warrant Quash” Calendar before 10AM with $100 and a photo ID. Pay the District Court Clerk’s Office and they will put you on the calendar. You can only do this one time per criminal charge.
-        p
-          | Alternatively you can pay the full amount of bail to the District Court Clerk, at any time, in person or through a bail bond company.
-        p
-          | *Remember, although the Judge sometimes offers cash bail (10% of the bail bond amount), this is not the rule, so you may be arrested on the spot for not having the entire bail bond amount. Call our office to find out your bail amount.
+          i *Remember, although the Judge sometimes offers cash bail (10% of the bail bond amount), this is not the rule, so you may be arrested on the spot for not having the entire bail bond amount. Call our office to find out your bail amount.
       section
         h3 When is my next court date?
         p
