--- a/views/contact.jade
+++ b/views/contact.jade
@@ -20,7 +20,7 @@ block content
       | Counsel
   main(role='content')
     header(role='banner')
-      h1 Jefferson Associated Counsel
+      h1 Welcome to Jefferson Associated Counsel (JAC)
       h2 Public Defense Office for Jefferson County, Washington
     article
       section
