--- a/views/index.jade
+++ b/views/index.jade
@@ -20,14 +20,14 @@ block content
       | Counsel
   main(role='content')
     header(role='banner')
-      h1 Jefferson Associated Counsel
+      h1 Welcome to Jefferson Associated Counsel (JAC)
       h2 Public Defense Office for Jefferson County, Washington
     article
       section
         h3
           a(href='/about') About Us
         p
-          | Jefferson Associated Counsel (JAC) organized as a 501(c)(3) non-profit in 2005 to improve the delivery of criminal defense services to the poor in Jefferson County Courts. We provide representation in felony, misdemeanor, juvenile, and dependency cases. 
+          | We organized in 2005 to improve the delivery of criminal defense services to low income people in Jefferson County Courts.  Be it felony, misdemeanor, juvenile, or dependency cases, we are a public interest non-profit firm ready to serve community members in need. 
           a(href='/about') Read More …
       section
         h3
