--- a/views/index.jade
+++ b/views/index.jade
@@ -22,6 +22,8 @@ block content
     header(role='banner')
       h1 Welcome to Jefferson Associated Counsel (JAC)
       h2 Public Defense Office for Jefferson County, Washington
+      p
+        img.inline-image(src="images/office.jpg")
     article
       section
         h3
@@ -31,7 +33,7 @@ block content
           a(href='/about') Read More …
       section
         h3
-          a(href='/resources') FAQ & Resources
+          a(href='/resources') FAQ &amp; Resources
         p
           | Here are FAQ’s and useful resources. 
           a(href='/resources') Read More …
