--- a/views/contact.jade
+++ b/views/contact.jade
@@ -19,10 +19,9 @@ block content
       br
       | Counsel
   main(role='content')
-    header(role='banner')
-      h1 Welcome to Jefferson Associated Counsel (JAC)
-      h2 Public Defense Office for Jefferson County, Washington
     article
+      header
+        h1 Contact Us
       section
         h3 Our Law Office
         address
