--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,7 @@ html
     meta(name='viewport', content='width=device-width, minimum-scale=1, maximum-scale=1')
     link(rel='stylesheet', type='text/css', href='stylesheets/normalize.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type="text/javascript", src="javascripts/jquery-1.11.1.min.js")
+    script(type="text/javascript", src="javascripts/index.js")
   body
     block content
