--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
       | Counsel
 
   #mobile-nav-bar
-    button#show-nav.hamburger-button
+    img#show-nav.hamburger-button(src="../images/hamburger.svg")
   nav#mobile-nav.hidden
     img#logo(src='images/logo.png')
     dl
