Move h5 to top bar on mobile nav

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -21,6 +21,7 @@ block content
 
   #mobile-nav-bar
     img#show-nav.hamburger-button(src="../images/hamburger.svg")
+    h5 Jefferson Associated Counsel
   nav#mobile-nav.hidden
     img#logo(src='images/logo.png')
     dl
@@ -32,12 +33,7 @@ block content
         a(href='/resources') Resources
       dt
         a.current(href='/contact') Contact Us
-    h5
-      | Jefferson
-      br
-      | Associated
-      br
-      | Counsel
+
   main(role='content')
     article
       header
