--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,8 @@
+
+/**
+ * Style
+ */
+
 body {
   margin: auto;
   font: 18px "Borgia Pro";
@@ -6,6 +11,8 @@ body {
   line-height: 1.556;
   height: 100%;
 }
+
+/* Typography */
 
 @font-face {
   font-family: "Borgia Pro";
@@ -210,7 +217,8 @@ nav#mobile-nav.hidden {
 /* Classes */
 
 .hamburger-button {
-  display: block;
+  display: inline;
+  vertical-align: middle;
   height: 35px;
   margin: 4px 6px;
   z-index: 11;
@@ -226,33 +234,7 @@ span.gc-cs-link {
   color: #212121;
 }
 
-.mask {
-  background-color: rgba(0,0,0,.5);
-  height: 100%;
-  left: 0;
-  opacity: .1;
-  top: 0;
-  visibility: hidden;
-  width: 100%;
-  z-index: 3;
-  position: fixed;
-  -webkit-transition: visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1);
-  -moz-transition: visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1);
-  transition: visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1);
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  transform: translateZ(0);
-}
-
-.mask-visible {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition-delay: 0;
-  -moz-transition-delay: 0;
-  transition-delay: 0;
-}
+/* Responsive */
 
 @media only screen and (max-width : 923px) {
   nav#desktop-nav {
@@ -264,6 +246,15 @@ span.gc-cs-link {
     position: fixed;
     border-left: none;
     padding-top: 92px;
+  }
+
+  #mobile-nav-bar > h5 {
+    display: inline;
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+    padding-left: 14px;
+    overflow: scroll;
   }
 
   #mobile-nav-bar {
