--- a/views/index.jade
+++ b/views/index.jade
@@ -21,6 +21,7 @@ block content
 
   #mobile-nav-bar
     img#show-nav.hamburger-button(src="../images/hamburger.svg")
+    h5 Jefferson Associated Counsel
   nav#mobile-nav.hidden
     img#logo(src='images/logo.png')
     dl
@@ -32,12 +33,7 @@ block content
         a(href='/resources') Resources
       dt
         a(href='/contact') Contact Us
-    h5
-      | Jefferson
-      br
-      | Associated
-      br
-      | Counsel
+
   main(role='content')
     header(role='banner')
       h1 Welcome to Jefferson Associated Counsel (JAC)
