Fix address on contact page

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -49,12 +49,12 @@ block content
             em Email 
             strong
               | · 
-              a.regular_link(href='mailto:attorney@ptdefense.com') attorney@ptdefense.com
+              a.regular_link(href='mailto:jac@olympus.net') jac@olympus.net
             br
             em Phone 
             strong
               | · 
-              span (360) 379-8906
+              span (360) 379-5613
             br
             em Fax 
             strong
