--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,11 @@ html
     title Public Defenders
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, minimum-scale=1, maximum-scale=1')
+    link(href="/images/favicon.ico", rel="shortcut icon", type="image/x-icon")
+    link(rel='apple-touch-icon-precomposed', href='apple-touch-iphone.png')
+    link(rel='apple-touch-icon-precomposed', sizes='72x72', href='apple-touch-ipad.png')
+    link(rel='apple-touch-icon-precomposed', sizes='114x114', href='apple-touch-iphone4.png')
+    link(rel='apple-touch-icon-precomposed', sizes='144x144', href='apple-touch-ipad-retina.png')
     link(rel='stylesheet', type='text/css', href='stylesheets/normalize.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type="text/javascript", src="javascripts/jquery-1.11.1.min.js")
